--- a/index.html
+++ b/index.html
@@ -36,24 +36,8 @@
   </header>
 
 
-  <section class="carrusel">
-    <span id="item_1"></span>
-    <span id="item_2"></span>
-    <span id="item_3"></span>
-    <div class="carrusel_item item_1">
-      <a href="#item_3" class="flecha_prev flecha"></a>
-      <a href="#item_2" class="flecha_next flecha"></a>
-    </div>
-
-    <div class="carrusel_item item_2">
-      <a href="#item_1" class="flecha_prev flecha"></a>
-      <a href="#item_3" class="flecha_next flecha"></a>
-    </div>
-
-    <div class="carrusel_item item_3">
-      <a href="#item_2" class="flecha_prev flecha"></a>
-      <a href="#item_1" class="flecha_next flecha"></a>
-    </div>
+  <section class="carrusel-container">
+    <div class="carrusel position"></div>
   </section>
 
 
@@ -79,7 +63,7 @@
     </div>
   </div>
 
-  <div class="sobre_nosotros" id="nosotros">
+  <div class="sobre_nosotros">
     <div class="sobre_nosotros_video">
       <video src="img/fire_suarepa.mp4" autoplay loop></video>
     </div>
@@ -131,15 +115,13 @@
         <p>06:00 - 10:00 pm</p>
       </div>
     </div>
-
   </section>
 
   <footer>
     <div id="ubicacion">
-      <iframe
+      <iframe class="mapa"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1183.1599474496986!2d-72.96496460109647!3d4.0894769227529455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e15a5b672dc94c1%3A0xc58526dd45734014!2sSu%20Arepa!5e0!3m2!1ses!2sco!4v1677287158232!5m2!1ses!2sco"
-        width="100%" height="540" style="border:1; margin-top: 90px;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
+        ;" allowfullscreen="" loading="lazy" "referrerpolicy=" no-referrer-when-downgrade">
       </iframe>
     </div>
     <span class="sigue">SíGUENOS</span>
@@ -154,9 +136,7 @@
         target="_blank">
         <i class="fa-brands fa-square-whatsapp"></i>
       </a>
-      <div>
-
-      </div>
+    </div>
     </div>
   </footer>
 
