--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <video src="img/fire_suarepa.mp4" autoplay loop></video>
     </div>
     <div class="sobre_nosotros_overlay"> </div>
-    <div class="nosotros">
+    <div class="nosotros" id="nosotros">
       <p>
         "Del sueño de tres hermanas nació <strong>Su Arepa</strong>, una empresa que tiene como eje fundamental su
         clientela, brindando los mejores sabores y presentaciones en sus preparaciones, es por eso que tenemos el
