--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <div class="sobre_nosotros">
     <div class="sobre_nosotros_video">
-      <video src="img/fire_suarepa.mp4" autoplay loop></video>
+      <video src="img/fire_suarepa.mp4" autoplay loop type="video/mp4"></video>
     </div>
     <div class="sobre_nosotros_overlay"> </div>
     <div class="nosotros" id="nosotros">
